--- a/idevice/Cargo.toml
+++ b/idevice/Cargo.toml
@@ -13,6 +13,8 @@ keywords = ["lockdownd", "ios"]
 [dependencies]
 tokio = { version = "1.43", features = ["io-util", "macros", "time"] }
 tokio-openssl = { version = "0.6" }
+tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
+tungstenite = { version = "0.20", features = ["native-tls"] }
 
 plist = { version = "1.7" }
 serde = { version = "1", features = ["derive"] }
@@ -36,6 +38,7 @@ rand = { version = "0.9", optional = true }
 futures = { version = "0.3", optional = true }
 
 sha2 = { version = "0.10", optional = true }
+image = { version = "0.24", optional = true }  
 
 [dev-dependencies]
 tokio = { version = "1.43", features = ["fs"] }
@@ -48,35 +51,38 @@ debug_proxy = []
 dvt = ["dep:byteorder", "dep:ns-keyed-archive"]
 heartbeat = []
 installation_proxy = []
+amfi = []
+companion_proxy = []
+instproxy = []
 misagent = []
-mounter = ["dep:sha2"]
-tcp = ["tokio/net"]
-tunnel_tcp_stack = ["dep:rand", "dep:futures", "tokio/fs"]
-tss = ["dep:uuid", "dep:reqwest"]
-tunneld = ["dep:serde_json", "dep:json", "dep:reqwest"]
-usbmuxd = ["tokio/net"]
-xpc = [
-  "tokio/sync",
-  "dep:indexmap",
-  "dep:uuid",
-  "dep:async-recursion",
-  "dep:base64",
-  "dep:json",
-]
+screenshot = []
+simulate_location = []
+usbmuxd = []
+web_inspector = []
+
 full = [
   "core_device_proxy",
   "debug_proxy",
   "dvt",
   "heartbeat",
   "installation_proxy",
+  "amfi",
+  "companion_proxy",
+  "instproxy",
   "misagent",
-  "mounter",
+  "screenshot",
+  "simulate_location",
   "usbmuxd",
+  "web_inspector",
   "xpc",
   "tcp",
   "tunnel_tcp_stack",
   "tss",
   "tunneld",
+  "afc",
+  "house_arrest",
+  "file_relay",
+  "diagnostics",  # Add to full feature set
 ]
 
 # Why: https://github.com/rust-lang/cargo/issues/1197
